# c2-rarus

./: .gitignore  build-advanced.cmd  readme-compilation.md  readme.md  run_test_console.cmd  service_diagnostics.cmd
progress/: CMakeLists.txt  build.cmd  initial-prompt.txt  screen_capture_service.cpp  service_installer.cpp
